--- a/ztodo-app/index.html
+++ b/ztodo-app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS - Login Form</title>
+    <title>Vite + React + TS - Todo App</title>
   </head>
   <body>
     <div id="root"></div>
